--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     <ul class="menu">
       <li class="menu-span"><a href="#"><span class="material-icons">menu</span></a></li>
-      <li class="menu-text"><a href="#">首頁</a></li>
-      <li class="menu-text"><a href="#">定價</a></li>
+      <li class="menu-text"><a href="index.html">首頁</a></li>
+      <li class="menu-text"><a href="price.html">定價</a></li>
     </ul>
   </div>
 
@@ -39,7 +39,7 @@
   <div class="service container">
     <div class="serviceTitle">
       <h3>我們的服務</h3>
-      <p class="H01-Bold">我們相信透過 AI 技術，<br>包括圖像識別、自然語言處理和機器翻<br>譯等，讓您更快、更準確地做出決策。</p>
+      <p class="H01-Bold">我們相信透過 AI 技術，包括圖像識別、自然語言處理和機器翻譯等，讓您更快、更準確地做出決策。</p>
     </div>
     <ul class="serviceList">
       <li class="serviceListCard">
@@ -304,8 +304,8 @@
 
   <div class="footer1 container">
     <ul class="menu">
-      <li><a href="#">首頁</a></li>
-      <li><a href="#">定價</a></li>
+      <li><a href="index.html">首頁</a></li>
+      <li><a href="price.html">定價</a></li>
     </ul>
     <div class="logo">
       <img src="pic/logo.png" alt="logo">
