--- a/price.html
+++ b/price.html
@@ -18,8 +18,8 @@
     </div>
     <ul class="menu">
       <li class="menu-span"><a href="#"><span class="material-icons">menu</span></a></li>
-      <li class="menu-text"><a href="#">首頁</a></li>
-      <li class="menu-text"><a href="#">定價</a></li>
+      <li class="menu-text"><a href="index.html">首頁</a></li>
+      <li class="menu-text"><a href="price.html">定價</a></li>
     </ul>
   </div>
 
@@ -37,6 +37,79 @@
     </div>
   </div>
 
+  <div class="products container">
+  <h3>定價</h3>
+  <ul class="prodList">
+    <li class="prodListCard">
+      <div class="prodDesc">
+        <h3>琪琪</h3>
+        <ul>
+          <li>初級</li>
+          <li>速度最快</li>
+        </ul>
+      </div>
+      <div class="prodPrice">
+        <p>NT$5／1k tokens</p>
+        <a href="#" class="btn4">開始使用<span class="material-icons ">call_made</span></a>
+      </div>
+    </li>
+    <li class="prodListCard">
+      <div class="prodDesc">
+        <h3>昊昊</h3>
+        <ul>
+          <li>中級</li>      
+        </ul>
+      </div>
+      <div class="prodPrice">
+        <p>NT$5／1k tokens</p>
+        <a href="#" class="btn4">開始使用<span class="material-icons ">call_made</span></a>
+      </div>    
+    </li>
+    <li class="prodListCard">
+      <div class="prodDesc">
+        <h3>卡卡</h3>
+        <ul>
+          <li>高級</li>        
+        </ul>
+      </div>    
+      <div class="prodPrice">
+        <p>NT$5／1k tokens</p>
+        <a href="#" class="btn4">開始使用<span class="material-icons ">call_made</span></a>
+      </div>    
+    </li>
+    <li class="prodListCard">
+      <div class="prodDesc">
+        <h3>杰杰</h3>
+        <ul>
+          <li>最高級</li>
+          <li>資訊最完善</li>
+        </ul>
+      </div>
+      <div class="prodPrice">
+        <p>NT$5／1k tokens</p>
+        <a href="#" class="btn4">開始使用<span class="material-icons ">call_made</span></a>
+      </div>    
+    </li>
+  </ul>
+  </div>
+
+  <div class="useRule container">
+    <h3>使用規範</h3>
+    <ul class="ruleList">
+      <li class="ruleContent">
+        <h2>守法</h2>
+        <p>請遵守相關的法規和政策，不得進行任何違法違規的活動。</p>
+      </li>
+      <li class="ruleContent">
+        <h2>資訊安全</h2>
+        <p>請務必保護好自己的帳號和密碼，不得將其透露給他人。</p>
+      </li>
+      <li class="ruleContent">
+        <h2>守密</h2>
+        <p>需對使用過程中產生的數據負責，不得擅自泄露數據。</p>
+      </li>
+    </ul>
+  </div>
 
   <div class="tools">
     <div class="container">
@@ -187,15 +260,43 @@
     </div>
   </div>
 
+  <div class="questions container">
+    <h3>常見問題</h3>
+    <ul class="questionList">
+     <li class="QA">
+      <span class="material-icons">add</span>
+      <p>如何選擇適合的AI模型？</p>
+     </li>
+     <li class="QA">
+      <span class="material-icons">add</span>
+      <p>租用模型的費用是如何計算的？</p>
+     </li>
+     <li class="QA">
+      <span class="material-icons">add</span>
+      <p>如何進行付款？</p>
+     </li>
+     <li class="QA">
+      <span class="material-icons">add</span>
+      <p>租用模型的期限是多久？</p>
+     </li>
+     <li class="QA">
+      <span class="material-icons">add</span>
+      <p>如果在使用過程中遇到問題，應該怎麼處理？</p>
+     </li>
+    </ul>
+  </div>
+
   <div class="footer1 container">
     <ul class="menu">
-      <li><a href="#">首頁</a></li>
-      <li><a href="#">定價</a></li>
+      <li><a href="index.html">首頁</a></li>
+      <li><a href="price.html">定價</a></li>
     </ul>
     <div class="logo">
       <img src="pic/logo.png" alt="logo">
     </div>
   </div>
+
+
 
   <div class="footer container">
     <p>AI工具王 © 2023</p>
