--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1><img src="pic/logo.png" alt="logo"></h1>
     </div>
     <ul class="menu">
-      <li class="menu-span"><a href="#"><span class="material-icons">menu</span></a></li>
+      <li class="menu-span"><a href="menu_mobile.html"><span class="material-icons">menu</span></a></li>
       <li class="menu-text"><a href="index.html">首頁</a></li>
       <li class="menu-text"><a href="price.html">定價</a></li>
     </ul>
@@ -173,10 +173,10 @@
           </span>
         </button>
       </div>
-      <ul class="toolsList">
+      <ul class="toolsList" id ="toolsList">
         <li class="toolsListCard">
           <div class="card-pic"><img
-              src="pic/tool1.png"
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9bbb89b66e6c86b5caec3cca7fa1a79e962de5b7/2023web-camp/tool1.png"
               alt="tool1"></div>
           <div class="tools-desc">
             <h3>Chatbot Builder</h3>
@@ -193,7 +193,7 @@
         </li>
         <li class="toolsListCard">
           <div class="card-pic"><img
-              src="pic/tool2.png"
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9bbb89b66e6c86b5caec3cca7fa1a79e962de5b7/2023web-camp/tool2.png"
               alt="tool2"></div>
           <div class="tools-desc">
             <h3>Image Recognition Platform</h3>
@@ -211,7 +211,7 @@
         </li>
         <li class="toolsListCard">
           <div class="card-pic"><img
-              src="pic/tool3.png"
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9bbb89b66e6c86b5caec3cca7fa1a79e962de5b7/2023web-camp/tool3.png"
               alt="tool3"></div>
           <div class="tools-desc">
             <h3>Language Translation API</h3>
@@ -228,7 +228,7 @@
         </li>
         <li class="toolsListCard">
           <div class="card-pic"><img
-              src="pic/tool4.png"
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9bbb89b66e6c86b5caec3cca7fa1a79e962de5b7/2023web-camp/tool4.png"
               alt="tool4"></div>
           <div class="tools-desc">
             <h3>Sentiment Analysis API</h3>
@@ -245,7 +245,7 @@
         </li>
         <li class="toolsListCard">
           <div class="card-pic"><img
-              src="pic/tool5.png"
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9bbb89b66e6c86b5caec3cca7fa1a79e962de5b7/2023web-camp/tool5.png"
               alt="tool5"></div>
           <div class="tools-desc">
             <h3>Fraud Detection Platform</h3>
@@ -263,7 +263,7 @@
         </li>
         <li class="toolsListCard">
           <div class="card-pic"><img
-              src="pic/tool6.png"
+              src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9bbb89b66e6c86b5caec3cca7fa1a79e962de5b7/2023web-camp/tool6.png"
               alt="tool6"></div>
           <div class="tools-desc">
             <h3>Voice Assistant SDK</h3>
@@ -281,15 +281,13 @@
         </li>
       </ul>
       <div class="pagination">
-        <ul class="paginationList">
+        <ul class="paginationList" id ="paginationList">
           <li><a class="btn3 active" href="#">1</a></li>
           <li><a class="btn3" href="#">2</a></li>
           <li><a class="btn3" href="#">3</a></li>
           <li><a class="btn3" href="#">4</a></li>
           <li><a class="btn3" href="#">5</a></li>
-          <li><a class="btn3" href="#"><span class="material-icons">
-                keyboard_arrow_right
-              </span></a></li>
+          <li><a class="btn3" href="#"><span class="material-icons">keyboard_arrow_right</span></a></li>
         </ul>
       </div>
     </div>
@@ -327,6 +325,7 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
   <script src="all.js"></script>
 </body>
 
