--- a/menu_mobile.html
+++ b/menu_mobile.html
@@ -14,7 +14,7 @@
       <h1><img src="pic/logo.png" alt="logo"></h1>
     </div>
     <ul class="menu">
-      <li class="menu-span"><a href="#"><span class="material-icons">menu</span></a></li>
+      <li class="menu-span"><a href="menu_mobile.html"><span class="material-icons">menu</span></a></li>
       <li class="menu-text"><a href="index.html">首頁</a></li>
       <li class="menu-text"><a href="price.html">定價</a></li>
     </ul>
@@ -22,8 +22,8 @@
 
   <div class="navbar-collapse container">
     <ul>
-      <li><a href="#" >首頁</a></li>
-      <li><a href="#" >定價</a></li>
+      <li><a href="index.html" >首頁</a></li>
+      <li><a href="price.html" >定價</a></li>
     </ul>
   </div>
 
