--- a/price.html
+++ b/price.html
@@ -17,7 +17,7 @@
       <h1><img src="pic/logo.png" alt="logo"></h1>
     </div>
     <ul class="menu">
-      <li class="menu-span"><a href="#"><span class="material-icons">menu</span></a></li>
+      <li class="menu-span"><a href="menu_mobile.html"><span class="material-icons">menu</span></a></li>
       <li class="menu-text"><a href="index.html">首頁</a></li>
       <li class="menu-text"><a href="price.html">定價</a></li>
     </ul>
