--- a/price.html
+++ b/price.html
@@ -314,6 +314,7 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
   <script src="all.js"></script>
 </body>
 
