--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
       <h3 class="tools-title">這些超酷的應用，都來自 AI工具王</h3>
       <div class="tools-input">
         <span class="material-icons searchicon">search</span>
-        <input type="text" placeholder="輸入關鍵字搜尋">
+        <input type="text" id="search" placeholder="輸入關鍵字搜尋">
       </div>
       <div class="tools-filters">
         <button id="filterbtn" class="btn">篩選
           <span class="material-icons">filter_alt</span>
         </button>
 
-        <ul class="filterkinds">
+        <ul class="filterkinds" id="filterbtns">
           <li  id="key0"><button class="btn2">全部</button></li>
           <li  id="key1"><button class="btn2">聊天</button></li>
           <li  id="key2"><button class="btn2">影像辨識</button></li>
