--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <li  id="key2"><button class="btn2">影像辨識</button></li>
           <li  id="key3"><button class="btn2">翻譯</button></li>
           <li  id="key4"><button class="btn2">行銷</button></li>
-          <li  id="key5"><button class="btn2">客服</button></li>
+          <li  id="key5"><button class="btn2">問答服務</button></li>
           <li  id="key6"><button class="btn2">生產力</button></li>
         </ul>
         <button id="filtersort" class="btn">由新到舊
@@ -326,6 +326,7 @@
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
+  <script src="tools.js"></script>
   <script src="all.js"></script>
 </body>
 
