--- a/price.html
+++ b/price.html
@@ -116,7 +116,7 @@
       <h3 class="tools-title">這些超酷的應用，都來自 AI工具王</h3>
       <div class="tools-input">
         <span class="material-icons searchicon">search</span>
-        <input type="text" placeholder="輸入關鍵字搜尋">
+        <input type="text" id="search" placeholder="輸入關鍵字搜尋">
       </div>
       <div class="tools-filters">
         <button id="filterbtn" class="btn">篩選
@@ -313,9 +313,9 @@
 
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>  
   <script src="all.js"></script>
+  
 </body>
 
 </html>
