tools js modify

--- a/menu_mobile.html
+++ b/menu_mobile.html
@@ -9,36 +9,38 @@
   <title>AI 工具王 - 產品優勢卡片設計</title>
 </head>
 <body>
-  <div class="header container">
-    <div class="logo">
-      <h1><img src="pic/logo.png" alt="logo"></h1>
+  <div class="menu_mobile">
+    <div class="header container">
+      <div class="logo">
+        <h1><img src="pic/logo.png" alt="logo"></h1>
+      </div>
+      <ul class="menu">
+        <li class="menu-span"><a href="menu_mobile.html"><span class="material-icons">menu</span></a></li>
+        <li class="menu-text"><a href="index.html">首頁</a></li>
+        <li class="menu-text"><a href="price.html">定價</a></li>
+      </ul>
     </div>
-    <ul class="menu">
-      <li class="menu-span"><a href="menu_mobile.html"><span class="material-icons">menu</span></a></li>
-      <li class="menu-text"><a href="index.html">首頁</a></li>
-      <li class="menu-text"><a href="price.html">定價</a></li>
-    </ul>
-  </div>
 
-  <div class="navbar-collapse container">
-    <ul>
-      <li><a href="index.html" >首頁</a></li>
-      <li><a href="price.html" >定價</a></li>
-    </ul>
-  </div>
+    <div class="navbar-collapse container">
+      <ul>
+        <li><a href="index.html" >首頁</a></li>
+        <li><a href="price.html" >定價</a></li>
+      </ul>
+    </div>
 
-  <div class="footer container">
-    <p>AI工具王 © 2023</p>
-    <ul class="link-site">      
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Instagram</a></li>
-    </ul>
-    <button id="backtoTop" class="backtoTop">Back to top
-      <span class="material-icons">
-        arrow_upward
-      </span>
-    </button>
+    <div class="footer container">
+      <p>AI工具王 © 2023</p>
+      <ul class="link-site">      
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+      </ul>
+      <button id="backtoTop" class="backtoTop">Back to top
+        <span class="material-icons">
+          arrow_upward
+        </span>
+      </button>
+    </div>
   </div>
 </body>
 </html>
