--- a/price.html
+++ b/price.html
@@ -33,9 +33,9 @@
     <h3 class="H01-Bold">我們相信，最靈活的取用機制，才能最大化的幫助你業務的推動。</h3>
     
     <div class="bannerAnimation">
-      <a href="#"><img src="pic/deco.png" alt="deco.png"></a>
-      <a href="#"><img src="pic/deco.png" alt="deco.png"></a>
-      <a href="#"><img src="pic/deco.png" alt="deco.png"></a>
+      <a href="#"><img class="animation1" src="pic/deco.png" alt="deco.png"></a>
+      <a href="#"><img class="animation2" src="pic/deco.png" alt="deco.png"></a>
+      <a href="#"><img class="animation3" src="pic/deco.png" alt="deco.png"></a>
     </div>
   </div>
 
