--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <a class="startbtn" href="#">開始使用</a>
 
     <div class="bannerAnimation">
-      <a href="#"><img src="pic/deco.png" alt="deco.png"></a>
-      <a href="#"><img src="pic/deco.png" alt="deco.png"></a>
-      <a href="#"><img src="pic/deco.png" alt="deco.png"></a>
+      <a href="#"><img class="animation1" src="pic/deco.png" alt="deco.png"></a>
+      <a href="#"><img class="animation2" src="pic/deco.png" alt="deco.png"></a>
+      <a href="#"><img class="animation3" src="pic/deco.png" alt="deco.png"></a>
     </div>
+ 
   </div>
 
   <div class="service container">
