--- a/price.html
+++ b/price.html
@@ -8,7 +8,7 @@
   <title>AI 工具王 - 產品優勢卡片設計</title>
   <link rel="stylesheet" href="SCSS/all.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;700;900&display=swap">
 
 </head>
 
@@ -125,13 +125,13 @@
           <span class="material-icons">filter_alt</span>
         </button>
 
-        <ul class="filterkinds">
+        <ul class="filterkinds" id="filterbtns">
           <li  id="key0"><button class="btn2">全部</button></li>
           <li  id="key1"><button class="btn2">聊天</button></li>
           <li  id="key2"><button class="btn2">影像辨識</button></li>
           <li  id="key3"><button class="btn2">翻譯</button></li>
           <li  id="key4"><button class="btn2">行銷</button></li>
-          <li  id="key5"><button class="btn2">客服</button></li>
+          <li  id="key5"><button class="btn2">問答服務</button></li>
           <li  id="key6"><button class="btn2">生產力</button></li>
         </ul>
         <button id="filtersort" class="btn">由新到舊
@@ -140,7 +140,7 @@
           </span>
         </button>
       </div>
-      <ul class="toolsList">
+      <ul class="toolsList" id ="toolsList">
         <li class="toolsListCard">
           <div class="card-pic"><img
               src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/9bbb89b66e6c86b5caec3cca7fa1a79e962de5b7/2023web-camp/tool1.png"
@@ -248,15 +248,13 @@
         </li>
       </ul>
       <div class="pagination">
-        <ul class="paginationList">
+        <ul class="paginationList" id ="paginationList">
           <li><a class="btn3 active" href="#">1</a></li>
           <li><a class="btn3" href="#">2</a></li>
           <li><a class="btn3" href="#">3</a></li>
           <li><a class="btn3" href="#">4</a></li>
           <li><a class="btn3" href="#">5</a></li>
-          <li><a class="btn3" href="#"><span class="material-icons">
-                keyboard_arrow_right
-              </span></a></li>
+          <li><a class="btn3" href="#"><span class="material-icons">keyboard_arrow_right</span></a></li>
         </ul>
       </div>
     </div>
@@ -393,7 +391,8 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>   
+  <script src="tools.js"></script>
   <script src="all.js"></script>
   
 </body>
